FlightPath 5.x Changelog
========================

2019-09-13
  Made it so legacy support for 4x style "concentrations" is DISABLED by default.  This is to help clear up confusion.  New
  language on the Add Degree form uses the new level-1, -2, and -3 terminology for consistency.
  
  Fixed a bug where previously-deleted tracks were showing as a blank degree_class to select from on the What If selection
  screen.  Make it simply where if the degree_class is blank, then skip over it.
  

2019-09-09
  Minor tweak to stop a warning from appearing.


2019-08-12
  Minor tweak in theme.inc, to fix menu icon bug which can happen sometimes.
  

2019-08-08
  But when adding new user; user isn't searchable.  Adding default lastname (username) if not entered.
  
  Fixed blocks module's administer_blocks permission.  Had typo preventing it from working.
  
  Updated format_date() function, so that the "short" format has am/pm at the end.
  

2019-08-07
  Fixed bug where when deleting a degree with a track, it wasn't being removed from the draft_degree_tracks table.


2019-07-23
  Adding better support for Graduate degrees & students.
  

2019-07-22
  Adding extra HTML and CSS when displaying degree titles on screen.
  

2019-06-14
  Patched a security bug whereby a user could theoretically try to view a system file, using a PHP Local File Include vulnerability.
  Special thanks to m.althibyani@gmail.com for finding and reporting!


2019-06-06
  Created a new core module: SMTP, as well as a helper function, fp_mail().  Now if you have the SMTP module
  enabled and configured, all mail is automatically routed through your SMTP server, instead of whatever
  the default setting is for PHP's mail() command.
  
  Added PHPMailer to the /inc/ directory (for the SMTP module).
  
  Moved some settings from the System Settings form and into the School settings form.
  
  Created a custom PHP error handler, so that we can display (and log if necessary, email, etc) PHP 